Load J2EE modules when using JRE 9